--- a/ansible/tasks/k3s.yml
+++ b/ansible/tasks/k3s.yml
@@ -11,4 +11,13 @@
   ansible.builtin.debug:
     var: ansible_facts.services
 
+- name: Run k3s install script
+  ansible.builtin.command: 
+    cmd: /tmp/k3s-install.sh
+    creates: /usr/local/bin/k3s
 
+- name: Restart ks3
+  ansible.builtin.service: 
+    name: k3s
+    state: restarted
+    enabled: true
