--- a/ansible/clean.yml
+++ b/ansible/clean.yml
@@ -6,6 +6,20 @@
   gather_facts: yes
   tasks:
 
-    - name: Run k3s install script
+    - name: Remove ~/.kube
+      ansible.builtin.file: 
+        path: "{{ansible_user}}/.kube"
+        state: absent
+
+    - name: Remove Acorn
+      ansible.builtin.file: 
+        path: "/usr/local/bin/acorn"
+        state: absent
+
+    - name: Run k3s uninstall script
       ansible.builtin.command: 
         cmd: k3s-uninstall.sh
+      ignore_errors: yes
+
+
+
