--- a/ansible/tasks/k3s.yml
+++ b/ansible/tasks/k3s.yml
@@ -33,10 +33,23 @@
 
 - name: Create a directory if it does not exist
   ansible.builtin.file:
-    path: "{{ user }}/.kube/"
+    path: "/home/{{ ansible_user }}/.kube/"
     state: directory
+    owner: "{{ansible_user}}"
+    group: "{{ansible_user}}"
 
 - name: Create kube config 
   ansible.builtin.copy:
     src: /etc/rancher/k3s/k3s.yaml
-    dest: "{{ user }}/.kube/config"
+    dest: "/home/{{ ansible_user }}/.kube/config"
+    owner: "{{ansible_user}}"
+    group: "{{ansible_user}}"
+    remote_src: yes
+
+
+- name: update KUBECONFIG in .bashrc
+  ansible.builtin.lineinfile:
+    path: ~/.bashrc
+    line: 'export KUBECONFIG=~/.kube/config'
+  become: false
+
